Issue #SB-18683 Resend otp and submit otp button text is not aligned properly in OTP page when user selects  tamil language

--- a/themes/themes-portal.scss
+++ b/themes/themes-portal.scss
@@ -444,7 +444,6 @@ html[layout='joy'] {
 	}
 
 	.sb-btn-link-primary {
-		border-radius: 0px;
 		box-shadow: none;
 		padding: calculateRem(8px) calculateRem(16px);
 
